gcc/testsuite/rust/rustc/ui/typeck/issue-89044-wrapped-expr-method_dg.rs
//@ run-rustfix

fn main() {
    let a = Some(42);
    println!(
        "The value is {}.",
        (a.unwrap) // { dg-error ".E0615." "" { target *-*-* } }
    );
}

